src/test/resources/private/typechecking/fail/double_decl/fail04_ctorParamDouble.jova
class Helper {

}

class Test {
    Test(int a, string a, bool a, float a, char a, Helper a){
    }
}